[package]
name = "cp_lb"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
config = "0.15.19"
pingora = { version = "0.6.0", features = ["pingora-load-balancing", "pingora-proxy"] }
pingora-core = { version = "0.6.0", features = ["rustls"] }
pingora-http = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-proxy = "0.6.0"
pretty_env_logger = "0.5.0"
serde = "1.0.228"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
